--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,36 @@
-<html>
+{% load static %}
+<!doctype html>
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Quarteirões</title>
+
+    <!-- Bootswatch 4.5.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/slate/bootstrap.min.css"
+        integrity="sha384-8iuq0iaMHpnH2vSyvZMSIqQuUnQA7QM+f6srIdlgBrTSEyd//AWNMyEaSF2yPzNQ" crossorigin="anonymous">
+
+    <!-- Javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <main>
+
+    <div>
+        {% include "navbar.html" %}
+    </div>
+    <div class="container">
         {% block content %}
-        {% endblock %}
-    </main>
+        {% endblock content %}
+    </div>
+    <footer>
+    </footer>
 </body>
 
 </html>
