--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %}Forgot Your Password?{% endblock %}
+{% block title %}Perdeu sua senha?{% endblock %}
 
 {% block content %}
-<h1>Forgot your password?</h1>
-<p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+<h1>Perdeu sua senha?</h1>
+<p>Entre com seu email cadastrado e receberá um email com os procedimentos de recuperação de senha.</p>
 
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    
+    <input class="btn btn-success" type="submit" value="Enviar instruções">
 </form>
 {% endblock %}
