--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 {% block title %}Perdeu sua senha?{% endblock %}
 
 {% block content %}
-<h1>Perdeu sua senha?</h1>
+<h1>Primeiro acesso ou perdeu sua senha?</h1>
 <p>Entre com seu email cadastrado e receberá um email com os procedimentos de recuperação de senha.</p>
 
 <form method="POST">
