:sparkles: feat: add cadastros de dados do boletim

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
             <ul class="navbar-nav me-auto ">
                 {% if user.is_authenticated %}
                 <li class="nav-item " data-toggle="pill">
-                    <a class="nav-link" href="">Home
+                    <a class="nav-link" href="{% url 'lira_boletim_list' %}">Home
 
                     </a>
                 </li>
