--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,6 +3,6 @@
 {% block title %}Password reset complete{% endblock %}
 
 {% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now on the <a href=" {% url 'login' %}">log in page</a>.</p>
+<h1>Redefinição de senha concluída</h1>
+<p>Sua nova senha foi definida. Você pode fazer login agora no <a href=" {% url 'login' %}">log in page</a>.</p>
 {% endblock %}
