--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,15 +1,27 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Perdeu sua senha?{% endblock %}
 
 {% block content %}
-<h1>Primeiro acesso ou perdeu sua senha?</h1>
-<p>Entre com seu email cadastrado e receberá um email com os procedimentos de recuperação de senha.</p>
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2>Primeiro acesso ou perdeu sua senha?</h2>
+                <p>Entre com seu email cadastrado e receberá um email com os procedimentos de recuperação de senha.</p>
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    
-    <input class="btn btn-success" type="submit" value="Enviar instruções">
-</form>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+
+                    <input class="btn btn-success" type="submit" value="Enviar instruções">
+                </form>
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 {% endblock %}
