--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,25 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button class="btn btn-success" type="submit">Log In</button>
-</form>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <div class="card auth-card">
+            <div class="card-body text-center">
+                <h2 class="card-title ">Log In</h2>
+                <br>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button class="btn btn-success" type="submit">Log In</button>
+                    <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
+                </form>                
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
