--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,26 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h2>Sign up</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Sign Up</button>
-</form>
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2 class="card-title">Criar Ace</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button class="btn btn-success" type="submit">Sign Up</button>
+                </form>
+            
+            </div>
+        </div>
+        
+        
+    </div>
+    
+</div>
+
 {% endblock %}
