--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -19,7 +19,7 @@
                 <div class="site-heading text-center">
                     <h3 class=" site-heading my-4 mt- text-white "> Sobre </h3>
 
-                    <p>Sistema criado por Flavio Roberto</p>
+                    <p>Sistema criado por Flavio dos Santos</p>
                 </div>
             </div>
         </div>
