--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <div>
     {% if user.is_authenticated %}
     <h1>
-        Hi {{ user.username }}!
+        Seja bem vindo(a) {{ user.username }}!
 
     </h1>
     <form action="{% url 'logout' %}" method="post">
