--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="{% url 'sobre' %}">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Hi {{ user.username }}!</a>
+                    <a class="nav-link" href="">Olá {{ user.username }}!</a>
                 </li>
                 
                 {% elif user.is_authenticated and user.is_staff %}
