--- a/templates/quart/lira_boletim_form.html
+++ b/templates/quart/lira_boletim_form.html
@@ -1,10 +1,27 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block title %}Criar Boletim{% endblock %}
 
 {% block content %}
-<h1>Create a New Lira Boletim</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2>Criar boletim</h2>
+
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+
+                    <input class="btn btn-success" type="submit" value="Criar Boletim">
+                    <a class="btn btn-secondary" href="{% url 'lira_boletim_list' %}">Cancel</a>
+                </form>
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 {% endblock %}
