--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-4 mt-2 offset-md-4">
         <div class="card auth-card">
             <div class="card-body text-center">
                 <h2 class="card-title ">Log In</h2>
