:sparkles: feat: add mapas, mod views e add templates

--- a/templates/indice/indice_list.html
+++ b/templates/indice/indice_list.html
@@ -8,7 +8,7 @@
     <h1>Você não está logado</h1>
     {% else %}
     <h1>
-        Olá {{ user.username }}. Este é o Ciclo {{ciclo}} <a href="{% url 'mapa' ciclo  %}" class="btn btn-success">Mapa
+        Olá {{ user.username }}. Este é o Ciclo {{ciclo}} <a href="{% url 'mapa' ciclo.ciclo  %}" class="btn btn-success">Mapa
             de calor &rarr;</a>
     </h1>
 
