:sparkles: feat: add: indice e ciclo, mod: views,templates

--- a/templates/boletim/lira_boletim_list.html
+++ b/templates/boletim/lira_boletim_list.html
@@ -8,7 +8,7 @@
 </section>
 
 <div class="container">
-    <table class="table">
+    <table class="table table-striped">
         <caption>Boletins</caption>
         <thead class="thead-dark">
             <tr>
