--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -9,7 +9,7 @@
         <div class="card auth-card">
             <div class="card-body ">
                 <h2>Primeiro acesso ou perdeu sua senha?</h2>
-                <p>Entre com seu email cadastrado e receberá um email com os procedimentos de recuperação de senha.</p>
+                <p>Entre com seu email cadastrado e receberá um email com os procedimentos de definição ou recuperação de senha.</p>
 
                 <form method="POST">
                     {% csrf_token %}
