--- a/templates/dado/lira_boletim_dado_list.html
+++ b/templates/dado/lira_boletim_dado_list.html
@@ -7,7 +7,7 @@
 </section>
 
 <div class="container">
-    <table class="table">
+    <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Id</th>
