--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,9 +33,8 @@
                     <a class="nav-link" href="{% url 'sobre' %}">Sobre</a>
                 </li>                
                 <li class="nav-item">
-                    <a class="nav-link" href="">Hi {{ user.username }}!</a>
+                    <a class="nav-link" href="">Olá {{ user.username }}!</a>
                 </li>
-                
                 {% else %}
                 <li class="nav-item ">
                     <a class="nav-link" href="{% url 'login' %}">Log In</a>
