:sparkles: feat: mod: models, urls, views,templates

--- a/templates/ciclo/ciclo_list.html
+++ b/templates/ciclo/ciclo_list.html
@@ -4,11 +4,11 @@
 
 <section class="container ">
     <h1 class="text-uppercase text-center">Lista de Ciclos</h1>
-    <a class='btn btn-secondary'  href="{% url 'lira_boletim_create' %}">Criar Ciclo</a>
+    <a class='btn btn-secondary'  href="{% url 'ciclo_create' %}">Criar Ciclo</a>
 </section>
 
 <div class="container">
-    <table class="table">
+    <table class="table table-striped">
         <caption>Ciclos</caption>
         <thead class="thead-dark">
             <tr>
