--- a/templates/boletim/lira_boletim_list.html
+++ b/templates/boletim/lira_boletim_list.html
@@ -5,6 +5,7 @@
 <section class="container ">
     <h1 class="text-uppercase text-center">Lista de Boletins</h1>
     <a class='btn btn-secondary'  href="{% url 'lira_boletim_create' %}">Criar Boletim</a>
+    Numero de boletins : {{ object_list.count }} 
 </section>
 
 <div class="container">
@@ -13,23 +14,28 @@
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Boletim</th>
+                <th scope="col">Ace</th>
                 <th scope="col">chefe</th>
                 <th scope="col">Modificado por</th>
+                <th scope="col">Criado</th>
                 <th scope="col">Opções</th>
             </tr>
         </thead>
         <tbody>
             {% for lira_boletim in object_list %}
             <tr>
-                <th scope="row"><a href="{% url 'lira_boletim_dado_list' lira_boletim.id_boletim %}">{{ lira_boletim }}</a></th>                
+                <th scope="row"><a href="{% url 'lira_boletim_dado_list' lira_boletim.id_boletim %}">{{ forloop.counter }} {{ lira_boletim }}</a></th>                
+                <td> {{ lira_boletim.usuario }}</td> 
                 <td> {{ lira_boletim.chefe }}</td> 
                 <td>{{ lira_boletim.updated_by}}</td>
+                <td>{{ lira_boletim.created_at}}</td>
                 <td>
                     <a type="submit" class="btn-sm btn-secondary" href="{% url 'liraboletim_detail' lira_boletim.id_boletim %}"
                         method="POST">Detalhes</a>
                     <a type="submit" class="btn-sm btn-warning" href="{% url 'lira_boletim_update' lira_boletim.id_boletim %}" method="POST">Editar</a>
-                    <a type="submit" class="btn-sm btn-danger" href="{% url 'lira_boletim_delete' lira_boletim.id_boletim %}" method="POST">Exluir</a>
-                    
+                    {% if lira_boletim.usuario == user.username %}
+                        <a type="submit" class="btn-sm btn-danger" href="{% url 'lira_boletim_delete' lira_boletim.id_boletim %}" method="POST">Exluir</a>
+                    {% endif %}
                 </td>
             </tr>
             <!-- If object_list is empty -->
