--- a/templates/boletim/liraboletim_detail.html
+++ b/templates/boletim/liraboletim_detail.html
@@ -37,9 +37,9 @@
                     <td>{{ boletim.chefe}}</td>
                     <td>{{ boletim.updated_by}}</td>
                     <td>
-                        <a type="submit" class="btn btn-primary" href="{% url 'lira_boletim_update' pk %}"
+                        <a type="submit" class="btn btn-secondary" href="{% url 'lira_boletim_update' pk %}"
                             method="POST">Editar</a>
-                        <a type="submit" class="btn btn-warning" href="{% url 'lira_boletim_delete' pk %}"
+                        <a type="submit" class="btn btn-danger" href="{% url 'lira_boletim_delete' pk %}"
                             method="POST">Excluir</a>
 
                     </td>
